feat: add application name configuration

--- a/config/app.toml
+++ b/config/app.toml
@@ -1,4 +1,6 @@
+# apply name
+name = "go-gin-api"
 # whether to enter debugging mode
-debug = true
+debug = false
 # timezone configuration
 timezone = "Asia/Shanghai"
